Revise introduction and remove education timeline
Updated personal introduction and removed an education entry.

--- a/index.html
+++ b/index.html
@@ -793,11 +793,10 @@
               <h3>Hello, I'm Anisa Marsela</h3>
               <h1>About Me</h1>
               <p>
-                Saya seorang siswi dari SMKN BANTARKALONG dengan jurusan
-                Rekayasa Perangkat Lunak yang memiliki keinginan kuat dalam
-                mempelajari hal-hal baru dan berminat dalam pengembangan web.
-                Saya adalah orang yang disiplin, berkomitmen, dan aktif dalam
-                berorganisasi serta mampu bekerja sama dalam tim.
+                Saya seorang pengembang web pemula yang memiliki 
+                keinginan kuat dalam mempelajari hal-hal baru. 
+                Saya merupakan pribadi yang disiplin, berkomitmen, 
+                dan aktif dalam berorganisasi serta mampu bekerja sama dalam tim.
               </p>
 
               <div class="hero-intro">
@@ -913,10 +912,6 @@
             <div class="timeline-item">
               <h4>2020 - 2023</h4>
               <h5>SMPN SATU ATAP 1 SODONGHILIR</h5>
-            </div>
-            <div class="timeline-item">
-              <h4>2014 - 2020</h4>
-              <h5>SDN KEBUN BUNGA 9 BANJARMASIN</h5>
             </div>
           </div>
         </div>
