Translate content to Indonesian language

--- a/index.html
+++ b/index.html
@@ -790,8 +790,8 @@
         <div class="content-page active" id="intro-page">
           <section class="intro-section">
             <div class="intro-text">
-              <h3>Hello, I'm Anisa Marsela</h3>
-              <h1>About Me</h1>
+              <h3>Hai,, Saya Anisa Marsela</h3>
+              <h1>Tentang Saya</h1>
               <p>
                 Saya seorang pengembang web pemula yang memiliki 
                 keinginan kuat dalam mempelajari hal-hal baru. 
@@ -812,7 +812,7 @@
         </div>
 
         <div class="content-page" id="resume-page">
-          <h2 class="section-title">Experience</h2>
+          <h2 class="section-title">Pengalaman</h2>
           <div class="timeline">
             <div class="timeline-item">
               <h4>Desember 2025 - April 2026</h4>
@@ -839,7 +839,7 @@
         </div>
 
         <div class="content-page" id="portfolio-page">
-          <h2 class="section-title">Portfolio</h2>
+          <h2 class="section-title">Portofolio</h2>
 
           <div class="portfolio-grid">
             <div class="portfolio-item">
@@ -902,7 +902,7 @@
         </div>
 
         <div class="content-page" id="education-page">
-          <h2 class="section-title">Education</h2>
+          <h2 class="section-title">Pendidikan</h2>
           <div class="timeline">
             <div class="timeline-item">
               <h4>2023 - 2026</h4>
