--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
           </ul>
 
           <div class="social-links">
-            <h3><b>Connect With Me</b></h3>
+            <h3><b>Hubungi Saya</b></h3>
             <a
               href="https://www.linkedin.com/in/anisa-marsela-8a2333398?utm_source=share_via&utm_content=profile&utm_medium=member_android"
               title="LinkedIn"
@@ -751,7 +751,7 @@
                 title="About Me"
                 class="nav-link active"
               >
-                <i class="fa-solid fa-user"></i> About Me
+                <i class="fa-solid fa-user"></i> Tentang Saya
               </a>
             </li>
             <li>
@@ -761,7 +761,7 @@
                 title="Experience"
                 class="nav-link"
               >
-                <i class="fa-solid fa-file-lines"></i> Experience
+                <i class="fa-solid fa-file-lines"></i> Pengalaman
               </a>
             </li>
             <li>
@@ -771,7 +771,7 @@
                 title="Portfolio"
                 class="nav-link"
               >
-                <i class="fa-solid fa-code"></i> Portfolio
+                <i class="fa-solid fa-code"></i> Portofolio
               </a>
             </li>
             <li>
@@ -781,7 +781,7 @@
                 title="Education"
                 class="nav-link"
               >
-                <i class="fa-solid fa-graduation-cap"></i> Education
+                <i class="fa-solid fa-graduation-cap"></i> Pendidikan
               </a>
             </li>
           </ul>
@@ -801,10 +801,10 @@
 
               <div class="hero-intro">
                 <ul>
-                  <li><span>Date of Birth</span>29 Maret 2007</li>
-                  <li><span>Religion</span>Islam</li>
-                  <li><span>Address</span>Tasikmalaya, Jawa Barat</li>
-                  <li><span>Country</span>Indonesia</li>
+                  <li><span>Lahir</span>29 Maret 2007</li>
+                  <li><span>Agama</span>Islam</li>
+                  <li><span>Alamat</span>Tasikmalaya, Jawa Barat</li>
+                  <li><span>Negara</span>Indonesia</li>
                 </ul>
               </div>
             </div>
