--- a/index.html
+++ b/index.html
@@ -848,6 +848,7 @@
               </div>
               <div class="portfolio-info">
                 <h4>Aplikasi Kasir Sederhana (Web)</h4>
+                <h6>Oktober - November 2025</h6>
                 <p>
                   Proyek Uji Kompetensi Keahlian (UKK) yang mencakup simulasi
                   transaksi penjualan barang.
@@ -869,6 +870,7 @@
               </div>
               <div class="portfolio-info">
                 <h4>Pengelolaan Basis Data (Android)</h4>
+                <h6>Juli 2025</h6>
                 <p>
                   Proyek sekolah membuat aplikasi Android sederhana untuk
                   manajemen data.
@@ -887,6 +889,7 @@
               </div>
               <div class="portfolio-info">
                 <h4>Desain Aplikasi Toko (Web)</h4>
+                <h6>Mei 2025</h6>
                 <p>
                   Membuat desain halaman toko online statis sebagai latihan
                   pemrograman web dasar.
