--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@
               <p>Membuat projek aplikasi dengan kerja sama tim.</p>
             </div>
             <div class="timeline-item">
-              <h4>Oktober 2025</h4>
+              <h4>November 2025</h4>
               <h5>UKK | SMKN BANTARKALONG</h5>
               <p>
                 Membuat aplikasi kasir sederhana berbasis web dengan menggunakan
@@ -847,8 +847,7 @@
                 <img src="Screenshot (43).png" alt="Aplikasi Kasir Web" />
               </div>
               <div class="portfolio-info">
-                <h4>Aplikasi Kasir Sederhana (Web)</h4>
-                <h6>Oktober - November 2025</h6>
+                <h4>Aplikasi Kasir Sederhana (Web) Oktober - November 2025</h4>
                 <p>
                   Proyek Uji Kompetensi Keahlian (UKK) yang mencakup simulasi
                   transaksi penjualan barang.
@@ -869,8 +868,7 @@
                 <img src="4.jpg" alt="Android App Kodular" />
               </div>
               <div class="portfolio-info">
-                <h4>Pengelolaan Basis Data (Android)</h4>
-                <h6>Juli 2025</h6>
+                <h4>Pengelolaan Basis Data (Android) Juli 2025</h4>
                 <p>
                   Proyek sekolah membuat aplikasi Android sederhana untuk
                   manajemen data.
@@ -888,8 +886,7 @@
                 <img src="Screenshot (45).png" alt="Landing Page Toko" />
               </div>
               <div class="portfolio-info">
-                <h4>Desain Aplikasi Toko (Web)</h4>
-                <h6>Mei 2025</h6>
+                <h4>Desain Aplikasi Toko (Web) Mei 2025</h4>
                 <p>
                   Membuat desain halaman toko online statis sebagai latihan
                   pemrograman web dasar.
